--- a/gb/16/5/11/n7885331.md
+++ b/gb/16/5/11/n7885331.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/simoep3399/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/simoep3399/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/simoep3399/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/simoep3399/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/simoep3399/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/simoep3399/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/simoep3399/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/simoep3399/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/simoep3399/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/simoep3399/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/simoep3399/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/simoep3399/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/simoep3399/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/simoep3399/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/simoep3399/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/simoep3399/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/simoep3399/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/simoep3399/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/simoep3399/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/simoep3399/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/simoep3399/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/simoep3399/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/simoep3399/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/simoep3399/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/simoep3399/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/simoep3399/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/simoep3399/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/simoep3399/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/simoep3399/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/simoep3399/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/simoep3399/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/simoep3399/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/simoep3399/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/simoep3399/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/simoep3399/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/simoep3399/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/simoep3399/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/simoep3399/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/simoep3399/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/simoep3399/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/simoep3399/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/simoep3399/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/simoep3399/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/simoep3399/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/simoep3399/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/simoep3399/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/simoep3399/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>北京法轮功学员恭贺世界法轮大法日暨李洪志大师华诞(27条)</h2>
 
 <h6></h6>
 <hr>
 	<p>【大纪元2016年05月11日讯】<br />
 <br /><B></p>
-<hr size=1>北京西城大法弟子恭祝慈悲伟大的师尊生日快乐！</B><br />祝贺<ahref="https://github.com/simoep3399/djy/blob/master/gb/tag/%E4%B8%96%E7%95%8C%E6%B3%95%E8%BD%AE%E5%A4%A7%E6%B3%95%E6%97%A5.md#1">世界法轮大法日</a>！<br /><center><br /><ahref=http://www.minghui.org/mh/article_images/2016-5-6-604290732492p0_01.jpg><img src=http://www.minghui.org/mh/article_images/2016-5-6-604290732492p0_01--ss.jpg></a><br /></center><br />北京西城大法弟子<br />二零一六年四月二十九日<br /><B></p>
-<hr size=1>北京昌平区大法弟子恭贺<ahref="https://github.com/simoep3399/djy/blob/master/gb/tag/%E4%B8%96%E7%95%8C%E6%B3%95%E8%BD%AE%E5%A4%A7%E6%B3%95%E6%97%A5.md#1">世界法轮大法日</a>！</B><br /><center><br /><ahref=http://www.minghui.org/mh/article_images/2016-5-6-605011121781p6_02.jpg><img src=http://www.minghui.org/mh/article_images/2016-5-6-605011121781p6_02--ss.jpg></a><br /></center><br /><center><br /><ahref=http://www.minghui.org/mh/article_images/2016-5-6-605011121781p6_05.jpg><img src=http://www.minghui.org/mh/article_images/2016-5-6-605011121781p6_05--ss.jpg></a><br /></center><br /><B></p>
+<hr size=1>北京西城大法弟子恭祝慈悲伟大的师尊生日快乐！</B><br />祝贺<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B8%96%E7%95%8C%E6%B3%95%E8%BD%AE%E5%A4%A7%E6%B3%95%E6%97%A5.md#1">世界法轮大法日</a>！<br /><center><br /><ahref=http://www.minghui.org/mh/article_images/2016-5-6-604290732492p0_01.jpg><img src=http://www.minghui.org/mh/article_images/2016-5-6-604290732492p0_01--ss.jpg></a><br /></center><br />北京西城大法弟子<br />二零一六年四月二十九日<br /><B></p>
+<hr size=1>北京昌平区大法弟子恭贺<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B8%96%E7%95%8C%E6%B3%95%E8%BD%AE%E5%A4%A7%E6%B3%95%E6%97%A5.md#1">世界法轮大法日</a>！</B><br /><center><br /><ahref=http://www.minghui.org/mh/article_images/2016-5-6-605011121781p6_02.jpg><img src=http://www.minghui.org/mh/article_images/2016-5-6-605011121781p6_02--ss.jpg></a><br /></center><br /><center><br /><ahref=http://www.minghui.org/mh/article_images/2016-5-6-605011121781p6_05.jpg><img src=http://www.minghui.org/mh/article_images/2016-5-6-605011121781p6_05--ss.jpg></a><br /></center><br /><B></p>
 <hr size=1>北京亚运村三名大法弟子及家人恭祝慈悲伟大的师尊华诞！</B><br /><center><br /><ahref=http://www.minghui.org/mh/article_images/2016-5-6-604301104755p1_01.jpg><img src=http://www.minghui.org/mh/article_images/2016-5-6-604301104755p1_01--ss.jpg></a><br /></center><br />恭祝师父生日快乐暨法轮大法日！感恩师尊！<br /><B></p>
 <hr size=1>北京丰台大法弟子恭祝师尊生日快乐！</B><br /><center><br /><ahref=http://www.minghui.org/mh/article_images/2016-5-7-605030212435p22_02.jpg><img src=http://www.minghui.org/mh/article_images/2016-5-7-605030212435p22_02--ss.jpg></a><br /></center><br /><B></p>
 <hr size=1>北京市海淀区大法弟子恭祝师尊华诞暨世界法轮大法日！</B><br /><center><br /><ahref=http://www.minghui.org/mh/article_images/2016-5-7-16050400155347872.jpg><img src=http://www.minghui.org/mh/article_images/2016-5-7-16050400155347872--ss.jpg></a><br /></center><br /><B></p>
@@ -16,7 +16,7 @@
 <hr size=1>北京大法弟子及家人恭祝慈悲伟大的师尊生日快乐！恭贺世界法轮大法日！</B><br />北京海淀区七十九岁的大法弟子及家人跪拜：恭祝慈悲伟大的师尊生日快乐！恭贺世界法轮大法日！<br />师父，您辛苦了！<br />北京大法弟子及家人跪拜叩首<br /><B></p>
 <hr size=1>北京大法弟子恭祝师父生日快乐！普天同庆5.13世界法轮大法日！</B><br /><center><br /><ahref=http://www.minghui.org/mh/article_images/2016-5-7-605040414966p1_01.jpg><img src=http://www.minghui.org/mh/article_images/2016-5-7-605040414966p1_01--ss.jpg></a><br /></center><br />颂恩<br />师父正法降凡尘<br />操劳擎难转法轮<br />苦度弟子救万众<br />新宇上下皆颂恩<br /><B></p>
 <hr size=1>北京海淀区四季青一个学法小组大法弟子恭祝慈悲伟大的师父生日快乐！</B><br />师父好！<br />在五一三世界法轮大法日到来之际，弟子恭祝慈悲伟大的师父生日快乐！您为了宇宙众生吃了无数的苦，遭了无数的罪，为了大法弟子操碎了心。弟子无以回报师父的救度之恩，在最后的时间里学好法，向内找，做好三件事，走正师父给安排的修炼之路。<br />北京海淀区四季青一个学法小组<br />2016年4月26日<br /><B></p>
-<hr size=1>北京大法弟子恭祝慈悲伟<ahref="https://github.com/simoep3399/djy/blob/master/gb/tag/%E5%A4%A7%E5%B8%88.md#1">大师</a>尊生日快乐！庆祝法轮大法弘传世二十四周年与世界法轮大法日！</B><br />我们曾经在迷茫中彷徨，是创世到来唤醒我们，才知我们是带有使命来这里。兑现我们的承诺，助师正法救度众生。讲真相、劝三退、唤醒世人，认清邪党真面目。弃恶从善，道德回升，世人皆知法轮大法好。善恶到头终有报，法正人间随师回家。<br />北京朝阳区一学法小组<br /><B></p>
+<hr size=1>北京大法弟子恭祝慈悲伟<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A4%A7%E5%B8%88.md#1">大师</a>尊生日快乐！庆祝法轮大法弘传世二十四周年与世界法轮大法日！</B><br />我们曾经在迷茫中彷徨，是创世到来唤醒我们，才知我们是带有使命来这里。兑现我们的承诺，助师正法救度众生。讲真相、劝三退、唤醒世人，认清邪党真面目。弃恶从善，道德回升，世人皆知法轮大法好。善恶到头终有报，法正人间随师回家。<br />北京朝阳区一学法小组<br /><B></p>
 <hr size=1>北京密云一学法小组大法弟子恭贺师尊华诞暨世界法轮大法洪传24周年！</B><br /><center><br /><ahref=http://www.minghui.org/mh/article_images/2016-5-7-16050514155347874.jpg><img src=http://www.minghui.org/mh/article_images/2016-5-7-16050514155347874--ss.jpg></a><br /></center><br /><B></p>
 <hr size=1>北京石景山首钢家属区学法小组大法弟子恭祝慈悲伟大的师尊生日快乐！庆祝世界法轮大法日！</B><br />师尊您好，弟子们万分想念您，在此向师尊叩拜，恭祝师尊生日快乐！谢谢师尊的慈悲普度和为我们的承受与付出。<br />我们学法小组的大法弟子，常人经历不同，所受魔难不同，各人能力与讲真相的方式也不同，但我们坚修大法，完成史前誓约，跟师父回家的心是一样的。我们一定要学好法，修好自己，学会向内找，做好各自参与的讲真相项目，救度更多的众生。<br />请师父放心，我们会加倍努力的。<br />北京石景山首钢家属区学法小组大法弟子<br /><B></p>
 <hr size=1>北京一学法小组大法弟子恭贺师尊六十五岁华诞暨世界法轮大法日！</B><br />恭贺慈悲伟大的师尊六十五岁华诞暨世界法轮大法日！<br />您本是创世之主、宇宙至尊，为正宇宙于末劫，为救万众苍生，层层转世降落凡尘。授大法予弟子，树道德于世人，普降佛法甘霖。但旧势力极尽干扰破坏，神州红魔肆虐江鬼横行。法徒受难，世人无生。是您卫道除魔法正宇清。指引法徒助师正法救度众生。<br />我们没有辜负师父的期望。为了兑现助师救人的誓约，我们小组的每一个弟子都参与了讲真相的所有项目。有的老年大法弟子年届花甲为了多救人，克服自身的种种困难，坚持直接给世人打电话劝三退，每月劝退数百人。过程中深感真正救人的是师父，弟子只是跑跑路、动动嘴；2015年5月诉江大潮，我们全组一致跟进。近几年，一弟子家中优昙婆罗花三次盛开。我们知道这是法轮圣王的奖赏与鼓励，师父就在我们身边。<br />我们也知道正法尚未结束，邪恶仍在行凶，讲真相救众生越到最后责任越重。我们一定按照师父的要求，走好修炼最后的路，修炼如初，不动摇，不放松，请师父放心。<br />北京市昌平区六人学法小组<br /><B></p>
@@ -40,41 +40,35 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/simoep3399/djy/blob/master/gb/16/5/10/n7881469.md#1">济南法轮功学员恭贺世界法轮大法日暨李洪志大师华诞(25条)</a></li>
-<li><a href="https://github.com/simoep3399/djy/blob/master/gb/16/5/10/n7881472.md#1">西安法轮功学员恭贺世界法轮大法日暨李洪志大师华诞(21条)</a></li>
-<li><a href="https://github.com/simoep3399/djy/blob/master/gb/16/5/10/n7881478.md#1">山东法轮功学员恭贺世界法轮大法日暨李洪志大师华诞(26条)</a></li>
-<li><a href="https://github.com/simoep3399/djy/blob/master/gb/16/5/10/n7881480.md#1">山西法轮功学员恭贺世界法轮大法日暨李洪志大师华诞(21条)</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/5/10/n7881469.md#1">济南法轮功学员恭贺世界法轮大法日暨李洪志大师华诞(25条)</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/5/10/n7881472.md#1">西安法轮功学员恭贺世界法轮大法日暨李洪志大师华诞(21条)</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/5/10/n7881478.md#1">山东法轮功学员恭贺世界法轮大法日暨李洪志大师华诞(26条)</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/5/10/n7881480.md#1">山西法轮功学员恭贺世界法轮大法日暨李洪志大师华诞(21条)</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/simoep3399/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/10/n10379858.md#1" target="_blank">剑平：抗美援朝？时间地点对手名义结果全错</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/1/n11491427.md#1" target="_blank">葛特曼：共同问责中共活摘器官的同谋犯</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/22/n11539349.md#1" target="_blank">共产暴政录：从毛泽东诗词谈中共卖国</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/15/n10977767.md#1" target="_blank">伊朗姑娘嘉扎尔?塔瓦纳艾(3) 骑向自由</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/simoep3399/djy/blob/master/gb/21/2/26/n12776678.md#1">《圣经》专家：龙确实存在 曾与人类共存</a></li>
-<li><a href="https://github.com/simoep3399/djy/blob/master/gb/20/12/30/n12654622.md#1">【命理】他才胜于德 如何走上自我毁灭之路</a></li>
-<li><a href="https://github.com/simoep3399/djy/blob/master/gb/21/2/26/n12777426.md#1">《转法轮》提及的史前文明案例：海底建筑</a></li>
-<li><a href="https://github.com/simoep3399/djy/blob/master/gb/21/3/2/n12784045.md#1">日本男童忆述上辈子被车撞死 想见前世母亲</a></li>
-<li><a href="https://github.com/simoep3399/djy/blob/master/gb/21/2/24/n12771764.md#1">预言试析（9）诺查丹玛斯预言大瘟疫时间的算法</a></li>
-<li><a href="https://github.com/simoep3399/djy/blob/master/gb/21/3/3/n12787815.md#1">【秦鹏直播】北京武力攻台？最危险时间点</a></li>
-<li><a href="https://github.com/simoep3399/djy/blob/master/gb/21/3/3/n12787783.md#1">【新闻看点】美尝遭主宰滋味？欧3强国警告中共</a></li>
-<li><a href="https://github.com/simoep3399/djy/blob/master/gb/21/3/2/n12785068.md#1">【军事热点】中共举行长期军演 南海注定不平静</a></li>
-<li><a href="https://github.com/simoep3399/djy/blob/master/gb/21/3/1/n12783059.md#1">44岁舒淇满头现白发 网友难接受为她支招</a></li>
-<li><a href="https://github.com/simoep3399/djy/blob/master/gb/21/3/2/n12785270.md#1">西昌市委书记李俊被双开 曾与女副书记通奸</a></li>
-<li><a href="https://github.com/simoep3399/djy/blob/master/gb/21/3/2/n12785540.md#1">【远见快评】放生中芯国际 拜登打右灯向左转</a></li>
-<li><a href="https://github.com/simoep3399/djy/blob/master/gb/21/3/1/n12783059.md#1">44岁舒淇满头现白发 网友难接受为她支招</a></li>
-<li><a href="https://github.com/simoep3399/djy/blob/master/gb/21/3/3/n12785644.md#1">唐嫣披罗晋西装外套 夫妻俩牵手下班秀恩爱</a></li>
-<li><a href="https://github.com/simoep3399/djy/blob/master/gb/21/3/1/n12783227.md#1">刘嘉玲释当经理人原因：梁朝伟很自闭需保护</a></li>
-<li><a href="https://github.com/simoep3399/djy/blob/master/gb/21/3/3/n12786688.md#1">粗口霸凌？外遇？江宏杰福原爱被爆协议离婚中</a></li>
-<li><a href="https://github.com/simoep3399/djy/blob/master/gb/21/3/2/n12785375.md#1">被公公赵树海爆贴心事 高圆圆获赞完美儿媳</a></li>
-<li><a href="https://github.com/simoep3399/djy/blob/master/gb/21/2/21/n12766128.md#1">90%打鼾的人是因为张嘴呼吸？简单4步止鼾</a></li>
-<li><a href="https://github.com/simoep3399/djy/blob/master/gb/21/3/2/n12784045.md#1">日本男童忆述上辈子被车撞死 想见前世母亲</a></li>
-<li><a href="https://github.com/simoep3399/djy/blob/master/gb/21/3/2/n12783856.md#1">【重播】糖尿病最怕的食物？3招降血糖学起来</a></li>
-<li><a href="https://github.com/simoep3399/djy/blob/master/gb/21/3/2/n12783382.md#1">凤梨助消化、改善便秘 4种情况要少吃</a></li>
-<li><a href="https://github.com/simoep3399/djy/blob/master/gb/21/3/2/n12783610.md#1">游客涌入俄罗斯动物园 听这只幼虎“唱歌”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/21/n11962082.md#1">【最新疫情3.22】川普启动三州国民警卫队</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11962674.md#1">意大利口罩被谁买空？意媒驳中共救援谎言</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11962341.md#1">对北京掩盖疫情失望 川普：中共非常诡秘</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11963263.md#1">【一线采访】武汉市民：对政府彻底失望</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11962520.md#1">企业家吁召开紧急会议 矛头直指中共最高层</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/23/n11965271.md#1">刘真惊传病逝 留下4岁女儿 享年44岁　</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11963031.md#1">胞弟成为台湾女婿 瑞莎曝婚礼照喊开心</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11959416.md#1">众星遭陆“限籍令”点名 台湾艺人揭中共套路</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/23/n11966011.md#1">刘真44岁辞世 演艺圈好友不舍</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/21/n11962008.md#1">好莱坞制作人瓦特染疫：身体像被巴士撞到</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/2/n11909598.md#1">【命理】长寿的命怎样看？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/11/n11933384.md#1">断臂僧转世？小蛮童有胆 向康熙帝要官职</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11945807.md#1">2020 否极泰来</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11964127.md#1">后悔或是一味良药 但须在大限前</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/21/n11961878.md#1">【历史回眸】人们忘记神 这就是一切的起因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/simoep3399/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/simoep3399/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/5/11/n7885331.htm">北京法轮功学员恭贺世界法轮大法日暨李洪志大师华诞(27条)</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/5/11/n7885331.htm">北京法轮功学员恭贺世界法轮大法日暨李洪志大师华诞(27条)</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/simoep3399/djy/blob/master/gb/16/5/11/n7885331.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/simoep3399/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/simoep3399/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/simoep3399/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/simoep3399/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/simoep3399/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/simoep3399/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/simoep3399/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/simoep3399/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/simoep3399/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/simoep3399/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/simoep3399/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/simoep3399/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/simoep3399/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/simoep3399/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/simoep3399/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/simoep3399/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/simoep3399/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/simoep3399/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/simoep3399/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/simoep3399/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/simoep3399/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/simoep3399/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/simoep3399/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/simoep3399/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/simoep3399/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/simoep3399/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/simoep3399/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/simoep3399/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/simoep3399/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/simoep3399/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/simoep3399/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/simoep3399/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/simoep3399/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/simoep3399/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/simoep3399/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/simoep3399/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/simoep3399/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/simoep3399/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/simoep3399/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/simoep3399/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/simoep3399/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/simoep3399/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/simoep3399/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/simoep3399/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/simoep3399/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/simoep3399/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/simoep3399/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/simoep3399/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/16/5/11/n7885331.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
